# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.36.1
	Jannik Glückert <https://github.com/Jannik2099>:
	- Remove unsupported ATTRIBUTE_SIGNAL

*eix-0.36.0
	Martin Väth <martin at mvath.de>:
	- New EBUILD_PORTAGE3_0_24 with default true.
	  If true, cache method ebuild* will assume >=sys-apps/portage-3.0.24,
	  and cache method ebuild will actually be equivalent to ebuild*.
	  See https://bugs.gentoo.org/815216

*eix-0.35.3
	Martin Väth <martin at mvath.de>:
	- Sets can also be in subdirectories: The name is the full subpath

	Florian Schmaus <flo at geekplace.eu>:
	- Work if there is no $HOME variable

*eix-0.35.2
	Martin Väth <martin at mvath.de>:
	- Fix segfault when reading dependencies of installed versions
	- Deal with duplicate entries in /var/db/pkg/*/*/IUSE, see
	  https://github.com/vaeth/eix/issues/88
	- Make contrib/check_includes.sh happy again

*eix-0.35.1
	Martin Väth <martin at mvath.de>:
	- Add idepend to hashing, fixing https://github.com/vaeth/eix/issues/87

*eix-0.35.0
	Martin Väth <martin at mvath.de>:
	- Support IDEPEND (EAPI=8). Output is not optimized yet: only DEPEND
	  and RDEPEND have a shortcut if one is a substring of the other.
	- Use natural order for USE, see https://github.com/vaeth/eix/issues/86
	- Add some gcc-11 flags

*eix-0.34.12
	Martin Väth <martin at mvath.de>:
	- Fix wrong braces configure.ac. Thanks to Ionen Wolkens for spotting.

*eix-0.34.11
	wwjjbb (https://github.com/wwjjbb):
	- Fix --proto category output: https://github.com/vaeth/eix/issues/80

*eix-0.34.10
	Andrew Kravchuk (https://github.com/lockie):
	- Make eix-remote more silent

*eix-0.34.9
	Jan Ziak <0xe2.0x9a.0x9b at gmail.com>:
	- Use sse2 for speedup of eix-update.

*eix-0.34.8
	Martin Väth <martin at mvath.de>:
	- Fix regression of 0.34.6 (and 0.34.5): Fix override_by_map. Thanks to
	  Grzegorz Kulewski <grzegorz at kulewski.pl> for debugging help.

*eix-0.34.7
	Martin Väth <martin at mvath.de>: